--- a/assets/style.css
+++ b/assets/style.css
@@ -4,6 +4,10 @@
     padding: 0;
 }
 
+body{
+    
+}
+
 .container{
     width: 835px;
     height: 300px;
@@ -13,6 +17,20 @@
 .master {
     width: 700px;
     height: 300px;
+    position: relative;
+}
+
+section img{
+    width: 700px;
+    height: 300px;
+    object-fit: cover;
+}
+
+.text{
+    text-align: right;
+    position: absolute;
+    right: 15px;
+    bottom: 20px;
 }
 
 .menu{
@@ -27,6 +45,7 @@
 }
 
 .preview img{
+    width: 100%;
     height: calc(100% / 5);
     background-color: darkblue;
     opacity: 50%;
