--- a/assets/style.css
+++ b/assets/style.css
@@ -57,10 +57,15 @@ section img{
     height: 100%;  
 }
 
-.preview img{
+.img_frame{
     width: 100%;
     height: 20%;
     background-color: darkblue;
+}
+
+.preview img{
+    width: 100%;
+    height: 100%;
     object-fit: cover;
     display: block;
 }
